<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:id="@+id/tableEditTask"
        android:layout_height="match_parent">

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/taskTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taskTitleLabel" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTaskTitle"
                android:hint="Nazwa zadania" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/taskDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taskDescriptionLabel" />

            <EditText
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editTaskDescription"
                android:hint="Opis zadania" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/taskDoToLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taskDoToLabel" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editTaskData" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/taskStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taskStatusLabel" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerStatusy" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taskStanLabel" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerStan" />

        </TableRow>
        <Button
            android:text="@string/buttonSaveTask"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/buttonSaveTask"
            android:layout_height="wrap_content" />
    </TableLayout>

</LinearLayout>