<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sebastian.todolist.MainActivity">

    <TextView
        android:text="@string/textAboutTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:id="@+id/textAboutTask"
        android:layout_marginBottom="10px" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:layout_marginBottom="10px" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textAboutTask"
        android:layout_alignParentStart="true"
        android:id="@+id/tasksList" />

    <Button
        android:text="@string/buttonAddTask"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/tasksList"
        android:id="@+id/buttonAddTask"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/buttonEdytujTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/tasksList"
        android:id="@+id/buttonEdytujTask"
        android:layout_marginBottom="80px" />

</RelativeLayout>
